objects/Asset.object
<CustomObject>
    <fields>
        <fullName>BROKEN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Currently BROKEN!!! Holy crap! We gotta do something to help them!</description>
        <inlineHelpText>Currently BROKEN!!! Holy crap! We gotta do something!!</inlineHelpText>
        <label>BROKEN!</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Height of Product</description>
        <label>Height</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lets keep track of lead assets too. We can keep this data and revive unqualified leads when asset records become obsolete. (by timeout)</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Self_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If they say they put it in themselves.
(Or if you can reasonably assume they do all their own work).</inlineHelpText>
        <label>Self-Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wants_to_Replace__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the prospect indicates an interest in getting these particular windows replaced.</description>
        <inlineHelpText>Check this if the prospect indicates an interest in getting these particular windows replaced.</inlineHelpText>
        <label>Wants to Replace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>The width in feet.(1.2inch increments)</description>
        <label>Width</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>